--- a/src/CallSharp/MainWindow.xaml
+++ b/src/CallSharp/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CallSharp"
+        xmlns:me="clr-namespace:CallSharp"
         xmlns:clr="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d" x:Name="mainWindow"
         Title="ActiveMesa CallSharp" Height="350" Width="525">
@@ -11,6 +11,7 @@
   <Window.Resources>
     <FontFamily x:Key="theFont">PragmataPro Mono,Consolas,Courier New</FontFamily>
     <clr:Double x:Key="smallFontSize">10</clr:Double>
+    <me:TypeToStringConverter x:Key="typeToString"/>
   </Window.Resources>
   
   <Grid DataContext="{Binding ElementName=mainWindow, Path=.}">
@@ -29,26 +30,30 @@
       <RowDefinition Height="Auto"></RowDefinition>
     </Grid.RowDefinitions>
     <Label HorizontalAlignment="Right">Input:</Label>
-    <TextBox Grid.Column="1" FontFamily="{StaticResource theFont}" Margin="3"
-             x:Name="TbIn"/>
+    <TextBox Grid.Row="0" Grid.Column="1" FontFamily="{StaticResource theFont}" Margin="3"
+             Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"/>
     
     <TextBlock Grid.Row="1" Grid.Column="1" 
                FontSize="{StaticResource smallFontSize}"
                Margin="2">
       <Span>Input treated as: </Span>
-      <Hyperlink>string</Hyperlink>
+      <Run FontWeight="Bold" Text="{Binding InputType, Converter={StaticResource typeToString}}"/>
+      <Span x:Name="AlternateInputValues">
+        
+      </Span>
     </TextBlock>
 
     <Label Grid.Row="2">Expected output:</Label>
     <TextBox Grid.Column="1" Grid.Row="2" 
              FontFamily="{StaticResource theFont}" Margin="3"
-             x:Name="TbOut"/>
+             Text="{Binding Path=OutputText, UpdateSourceTrigger=PropertyChanged}"/>
     
     <TextBlock Grid.Row="3" Grid.Column="1" 
                FontSize="{StaticResource smallFontSize}"
                Margin="2">
       <Span>Output treated as: </Span>
-      <Hyperlink>string</Hyperlink>
+      <Run FontWeight="Bold" Text="{Binding OutputType, Converter={StaticResource typeToString}}"/>
+      <Span x:Name="AlternateOutputValues"/>
     </TextBlock>
 
     <StackPanel Orientation="Vertical" Grid.Row="4" Grid.Column="0">
@@ -66,9 +71,9 @@
       <StatusBarItem>
         <TextBlock Name="TbInfo" FontSize="{StaticResource smallFontSize}"></TextBlock>
       </StatusBarItem>
-      <StatusBarItem>
+      <!--<StatusBarItem>
         <ProgressBar></ProgressBar>
-      </StatusBarItem>
+      </StatusBarItem>-->
     </StatusBar>
   </Grid>
 </Window>
