--- a/src/CallSharp/MainWindow.xaml
+++ b/src/CallSharp/MainWindow.xaml
@@ -62,7 +62,7 @@
               x:Name="BtnSearch" Click="BtnSearch_OnClick">Search!</Button>
       <Button Height="50" Margin="3" VerticalAlignment="Top"
               x:Name="BtnCopy" Click="BtnCopy_OnClick">Copy Selected</Button>
-      <CheckBox Margin="3" x:Name="CbScaleWindow" Checked="ToggleButton_OnChecked">Scale window</CheckBox>
+      <CheckBox Margin="3" x:Name="CbScaleWindow" Checked="ToggleButton_OnChecked" Visibility="Collapsed">Scale window</CheckBox>
     </StackPanel>
     <ListBox Grid.Row="4" Grid.Column="1" Margin="3" 
              FontFamily="{StaticResource theFont}"
