--- a/src/CallSharp/MainWindow.xaml
+++ b/src/CallSharp/MainWindow.xaml
@@ -7,13 +7,13 @@
         xmlns:clr="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d" x:Name="mainWindow"
         Title="ActiveMesa CallSharp" Height="300" Width="400">
-  
+
   <Window.Resources>
     <FontFamily x:Key="theFont">PragmataPro Mono,Consolas,Courier New</FontFamily>
     <clr:Double x:Key="smallFontSize">10</clr:Double>
     <me:TypeToStringConverter x:Key="typeToString"/>
   </Window.Resources>
-  
+
   <Grid DataContext="{Binding ElementName=mainWindow, Path=.}"
         me:ScaleToWindowSizeBehavior.Denominators="400, 300"
         me:ScaleToWindowSizeBehavior.ParentWindow="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
@@ -35,20 +35,27 @@
     <Label HorizontalAlignment="Right">Input:</Label>
     <TextBox Grid.Row="0" Grid.Column="1" FontFamily="{StaticResource theFont}" Margin="3"
              Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"/>
-    
+
     <TextBlock Grid.Row="1" Grid.Column="1" 
                FontSize="{StaticResource smallFontSize}"
-               Margin="2">
-      <Span>Input treated as: </Span>
-      <Run FontWeight="Bold" Text="{Binding InputType, Converter={StaticResource typeToString}}"/>
-      <Span x:Name="AlternateInputValues" />
+               Margin="2" TextWrapping="Wrap">
+      <Span>
+        <Run>Input treated as </Run>
+        <Run FontWeight="Bold">a scalar value</Run>
+      </Span>
+      <LineBreak/>
+      <Span>
+        <Span>of type </Span>
+        <Run FontWeight="Bold" Text="{Binding InputType, Converter={StaticResource typeToString}}"/>
+        <Span x:Name="AlternateInputValues" />
+      </Span>
     </TextBlock>
 
     <Label Grid.Row="2">Expected output:</Label>
     <TextBox Grid.Column="1" Grid.Row="2" 
              FontFamily="{StaticResource theFont}" Margin="3"
              Text="{Binding Path=OutputText, UpdateSourceTrigger=PropertyChanged}"/>
-    
+
     <TextBlock Grid.Row="3" Grid.Column="1" 
                FontSize="{StaticResource smallFontSize}"
                Margin="2">
@@ -68,10 +75,13 @@
              FontFamily="{StaticResource theFont}"
              ItemsSource="{Binding Candidates}"
              x:Name="LbCandidates"/>
-    
+
     <StatusBar Grid.Row="5" Grid.ColumnSpan="2">
       <StatusBarItem>
         <TextBlock Name="TbInfo" FontSize="{StaticResource smallFontSize}" />
+      </StatusBarItem>
+      <StatusBarItem>
+        <TextBlock Name="TbLevel" FontSize="{StaticResource smallFontSize}"/>
       </StatusBarItem>
       <!--<StatusBarItem>
         <ProgressBar></ProgressBar>
